# agno-sample-for-zenn

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml  questions.csv
data/: sample.csv  sample.txt
pgvector/: init.sql
src/: ingest.py  query.py
